deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lectern
spec:
  selector:
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
